# cbus

./: .env  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  Dockerfile.simulator  README.md  SIMULATOR.md  analyze_memory_leaks.py  docker-compose.simulator.yml  docker-compose.yml  entrypoint-cmqttd.sh  entrypoint-simulator.sh  memory_profile_pci.py  requirements.txt  run-services.sh  setup.py  test_cni_events.py
.github/workflows/: ci.yml  docker-build.yml  test-and-push.yml
cbus/: common.py  constants.py  paho_asyncio.py
cbus-proxy/: .gitignore  Dockerfile  Dockerfile.standalone  README.md  __main__.py  docker-compose.standalone.yml  proxy.py  run-proxy.sh  update-multi-client.sh
cbus-simulator/: Dockerfile  README.md  entrypoint.sh  requirements.txt  run_simulator.py
cbus-simulator/docs/: PROTOCOL.md
cbus-simulator/simulator/: __init__.py  protocol.py  server.py  state.py
cbus-simulator/tests/: __init__.py  test_client.py
cmqttd_config/: README.md
config/: cbus-group-labels.json  simulator-config.json
docs/: API_REFERENCE.md  CODE_REVIEW_DETAILED.md  COMPREHENSIVE_ARCHITECTURE.md  CONTRIBUTING.md  DETAILED_FLOW_DIAGRAMS.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  PROTOCOL_DEEP_DIVE.md  SIMULATOR_INTEGRATION.md  SYSTEM_OVERVIEW_DIAGRAM.md  TROUBLESHOOTING.md  cmqttd.rst  index.rst  proxy-capture-analysis-2026-04-26.md
esp32-firmware/: diagram.json  native_e2e_bridge.c  native_tcp_server.c  platformio.ini  test_exhaustive.c  test_quick.c  wokwi.toml
experiments/: cni_discovery.py
python-legacy/: Dockerfile.python  README.md  setup.py  test_cni_events.py
rust/: Cargo.toml  README.md
rust-migration-harness/: README.md  generate_vectors.py  run.sh
rust/cbus-golden-tests/: Cargo.toml  build.rs
rust/cbus-golden-tests/src/: lib.rs
rust/cbus-golden-tests/tests/: domain.rs  golden_vectors.rs
rust/cbus-mqtt/: Cargo.toml
rust/cbus-mqtt/src/: cbz.rs  command.rs  discovery.rs  lib.rs  topics.rs  vector_check.rs
rust/cbus-mqtt/tests/: cbz_edges.rs  discovery_labels.rs  set_command_matrix.rs  topics_edges.rs
rust/cbus-protocol/: Cargo.toml
rust/cbus-protocol/src/: cal.rs  common.rs  consts.rs  decode.rs  json.rs  lib.rs  packet.rs  report.rs
rust/cbus-protocol/src/sal/: clock.rs  enable.rs  lighting.rs  mod.rs  status_request.rs  temperature.rs
rust/cbus-protocol/tests/: common_edges.rs  decode_edges.rs  encode_edges.rs  json_edges.rs  proptest_roundtrip.rs
rust/cbus-simulator/: Cargo.toml
rust/cbus-simulator/src/: main.rs
rust/cbus-simulator/tests/: system_sim.rs
rust/cbus-test-support/: Cargo.toml
rust/cbus-test-support/src/: broker.rs  lib.rs  pci.rs  proc.rs  wait.rs
rust/cbus-tools/: Cargo.toml
rust/cbus-tools/src/: main.rs
rust/cbus-tools/tests/: cli.rs
rust/cbus-transport/: Cargo.toml
rust/cbus-transport/src/: conn.rs  flow.rs  framing.rs  lib.rs  pci.rs
rust/cbus-transport/tests/: endpoint_edges.rs  framing_edges.rs  proptest_framing.rs
rust/cbus-vector-check/: Cargo.toml
rust/cbus-vector-check/src/: main.rs
rust/cmqttd/: Cargo.toml
rust/cmqttd/src/: cli.rs  discover.rs  gateway.rs  main.rs  setup.rs  throttle.rs
rust/cmqttd/tests/: system_commands.rs  system_discovery.rs  system_events.rs  system_flow.rs  system_init.rs  system_resilience.rs
rust/cmqttd/tests/util/: mod.rs
tests/: simulator_utils.py  test_cmqttd.py  test_common.py  test_enable.py  test_esp32_cli.py  test_esp32_discovery.py  test_esp32_emulator_serial.py  test_esp32_exhaustive.py  test_esp32_ha_discovery.py  test_esp32_protocol_compliance.py  test_memory_protection.py  test_pciprotocol.py  test_protocol_exhaustive.py  test_simulator_integration.py  test_transport_serial.py  test_web_config.py  test_wokwi_esp32.py  utils.py
venv_test/: pyvenv.cfg
(+129 files in other folders)
