[workspace]
resolver = "2"
members = [
    "cbus-protocol",
    "cbus-mqtt",
    "cbus-transport",
    "cmqttd",
    "cbus-vector-check",
    "cbus-simulator",
    "cbus-tools",
]

[workspace.package]
edition = "2021"
license = "LGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
tokio-serial = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
roxmltree = "0.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
hex = "0.4"
# TLS: must track the rustls major used by rumqttc (0.22 for rumqttc 0.24)
rustls = "0.22"
rustls-native-certs = "0.7"
rustls-pemfile = "2"
