[package]
name = "cbus-golden-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Generated tests: one per committed golden vector, plus exhaustive domain enumerations"

[dependencies]
cbus-protocol = { path = "../cbus-protocol" }
cbus-mqtt = { path = "../cbus-mqtt" }
cbus-transport = { path = "../cbus-transport" }
serde_json = { workspace = true }
hex = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
