[package]
name = "cbus-simulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cbus-protocol = { path = "../cbus-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.cbus-transport]
path = "../cbus-transport"

[dependencies.hex]
workspace = true
