[package]
name = "cbus-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cbus-protocol = { path = "../cbus-protocol" }
cbus-mqtt = { path = "../cbus-mqtt" }
clap = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
[dependencies.roxmltree]
workspace = true

[dependencies.serde]
workspace = true
