[package]
name = "cbus-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cbus-protocol = { path = "../cbus-protocol" }
tokio = { workspace = true }
tokio-serial = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
